Fix: Nav width on mobile.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -614,6 +614,7 @@ section#footer{
         width: 100%;
         div.nav-container{
             height: fit-content;
+            width: 100%;
             div#logo{
                 height: 50px;
                 button{
